# FlashcardQTApp

./: .clang-tidy  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakelists.txt  FlashcardApp  Makefile  README.md  Requirements.md  cmake_install.cmake  db_config.csv  docker-compose.yaml  init-dockers.sh  setup.sh  setup1.sh  sql_querry.txt
FlashcardApp_autogen/: mocs_compilation.cpp
FlashcardApp_autogen/ES4S3OPVRA/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
FlashcardApp_autogen/include/: ui_mainwindow.h
docker-entrypoint-initdb.d/: init.sql
sets/: 12345.txt
src/: main.cc
src/db_connection/: connect_db.cc  connect_db.cpp  connect_db.h  db_sets.cc  db_sets.h  db_users.cc  db_users.h
src/flashcardmanagement/: Flashcard.cc  Flashcard.h  Set.cc  Set.h  Users_sets.cc  Users_sets.h
src/qt_ui/: enumpage.h  loginwindow.cc  loginwindow.h  loginwindow.ui  mainwindow.cc  mainwindow.h  mainwindow.ui  newnamedialog.cc  newnamedialog.h  newnamedialog.ui  userdialog.cc  userdialog.h  userdialog.ui
src/users/: User.cc  User.h
tests/: CMakeLists.txt  flashcard_test.cc  set_test.cc  test_main.cc  user_test.cc
